# iRobot

./: CMakeLists.txt  README.md  install_dependancies_mac.sh  install_dependancies_wsl.sh  package.xml  requirements.txt  setup.py
.github/workflows/: main.yml
mock_ros/: irobot.db  setup.cfg
mock_ros/irobot/: cli.py  db_manager.py  network.py
mock_ros/irobot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
mock_ros/irobot/nodes_py/: listener.py  talker.py
mock_ros/tests/: conftest.py  test_cli.py  test_db_manager.py  test_network.py
p2p_ros_package/common/: db.py
p2p_ros_package/main/: publisher.py
src/p2p_ros_package/common/: networking.py
src/p2p_ros_package/launch/: p2p_launch.py
src/p2p_ros_package/main/: subscriber.py
