<?xml version="1.0"?>
<package format="3">
  <name>p2p_ros_package</name>
  <version>0.1.0</version>
  <description>ROS2 P2P package with CRUD/SQLite support</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>